--- a/1.html
+++ b/1.html
@@ -5,6 +5,7 @@
     <head>
         <title>Kim DoGyun</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <!--글꼴 진하게 , 밑줄 u--> 
@@ -12,11 +13,14 @@
     <body>
         <h1><a href="index.html">이것은 <u>Kim DoGyun</u>의 Web연습 웹입니다.</a></h1>
         <!--ul ol   ol은 숫자도 표기-->
+        <div id="grid">
         <ol>                
             <li><a href="1.html">HTML</a></li>
             <li><a href="2.html">CSS</a></li>
             <li><a href="3.html">JavaScript</a></li>
         </ol>
+
+        <div>
         <h2>HTML</h2>
 
         2022년 3월 12일 토요일
@@ -28,7 +32,7 @@
             이 편집기에는 '커서'라는 것이 있는데, 커서는 문장의 맨 앞(첫 번째 문자의 왼쪽), 문장의 맨 뒤(마지막 문자의 오른쪽), 또는 문장 중간 임의의 곳(모든 연속된 두 문자 사이)에 위치할 수 있다. 즉 길이가 L인 문자열이 현재 편집기에 입력되어 있으면, 커서가 위치할 수 있는 곳은 L+1가지 경우가 있다.
             
             이 편집기가 지원하는 명령어는 다음과 같다.</p>  
-
-        
+        </div>
+        </div>
     </body>
 </html>
