--- a/3.html
+++ b/3.html
@@ -5,6 +5,7 @@
     <head>
         <title>Kim DoGyun</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <!--글꼴 진하게 , 밑줄 u--> 
@@ -12,11 +13,13 @@
     <body>
         <h1><a href="index.html">이것은 <u>Kim DoGyun</u>의 Web연습 웹입니다.</a></h1>
         <!--ul ol   ol은 숫자도 표기-->
+        <div id="grid">
         <ol>                
             <li><a href="1.html">HTML</a></li>
             <li><a href="2.html">CSS</a></li>
             <li><a href="3.html">JavaScript</a></li>
         </ol>
+        <div>
         <h2>JavaScript</h2>
 
         2022년 3월 12일 토요일
@@ -27,7 +30,7 @@
             둘째 줄에는 입력할 명령어의 개수를 나타내는 정수 M(1 ≤ M ≤ 500,000)이 주어진다. 
             셋째 줄부터 M개의 줄에 걸쳐 입력할 명령어가 순서대로 주어진다. 
             명령어는 위의 네 가지 중 하나의 형태로만 주어진다</p>  
-
-        
+        </div>
+        </div>
     </body>
 </html>
