--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <title>Kim DoGyun</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <!--글꼴 진하게 , 밑줄 u--> 
@@ -12,11 +13,13 @@
     <body>
         <h1><a href="index.html">이것은 <u>Kim DoGyun</u>의 Web연습 웹입니다.</a></h1>
         <!--ul ol   ol은 숫자도 표기-->
+        <div id="grid">
         <ol>                
             <li><a href="1.html">HTML</a></li>
             <li><a href="2.html">CSS</a></li>
             <li><a href="3.html">JavaScript</a></li>
         </ol>
+        <div>
         <h2>Home Page</h2>
 
         2022년 3월 12일 토요일
@@ -25,5 +28,7 @@
             여긴 홈페이지</p>  
 
         <img src="img.jpg" width="50%">
+    </div>
+    </div>
     </body>
 </html>
