--- a/react/clone/clone/public/index.html
+++ b/react/clone/clone/public/index.html
@@ -7,6 +7,14 @@
     <meta name="description" />
 
     <title>CloneCoding</title>
+
+    <style>
+      body {
+        margin: 0;
+        font-family: OhouseSans, Noto Sans KR, Apple SD Gothic Neo, 맑은 고딕,
+          Malgun Gothic, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
